<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grumpy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="signup_introduction">New To Grumpy ? Sign Up!</string>
    <string name="SignUpLabel">Sign Up</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Your Password:</string>
    <string name="full_name">Full Name:</string>
    <string name="feed_profile_picture">Profile Picture</string>

    <string name="days_ago">%d days ago</string>
    <string name="yesterday_at">Yesterday at %s</string>
    <string name="today_at">Today at %s</string>
    <string name="hours_ago">%s hours ago</string>
    <string name="hminutes_ago">%s minutes ago</string>
    <string name="refresh">Refresh</string>
    <string name="search_user">Search User</string>
    <string name="no_users_found">Found No Users\nTry Again</string>
    <string name="new_post">New Post</string>
    <string name="less_than">Less than %d hour ago</string>
    <string name="write_post">Write new post:</string>
    <string name="send_new_post">Post</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="no_network">No Network Connection</string>
    <string name="take_profile_pic">Take profile picture</string>
    <string name="sex">Sex</string>
    <string name="birth_year">Birth year</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="UpdateLabel">update</string>

    <array name="sex_array">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </array>
    <string name="write_comment">Write Comment</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="people_like_posts">People Who Like This!</string>
    <string name="email">Email</string>
    <string name="about">About</string>

</resources>
