<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
>

    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingLeft="10sp"
        android:text="@string/first_name"
        style="@style/BaseTextStyle.Item"
    />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
    />

    <TextView
        android:id="@+id/label_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingLeft="10sp"
        android:text="@string/last_name"
        style="@style/BaseTextStyle.Item"
    />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
    />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingLeft="10sp"
        android:text="@string/email"
        style="@style/BaseTextStyle.Item"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/label_birth_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingLeft="10sp"
                android:text="@string/birth_year"
                style="@style/BaseTextStyle.Item"
                />

            <EditText
                android:id="@+id/birth_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
            />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/label_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingLeft="10sp"
                android:text="@string/sex"
                style="@style/BaseTextStyle.Item"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/label_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingLeft="10sp"
        android:text="@string/about"
        style="@style/BaseTextStyle.Item"
        />

    <EditText
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <Button
        android:id="@+id/updateUserButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textAlignment="center"
        android:text="@string/UpdateLabel"
        android:textColor="#fff"
        android:background="@drawable/btn_login_signup_selector"
        />
</LinearLayout>
</ScrollView>