<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_introduction"
            android:gravity="center"
            style="@style/BaseTextStyle.Header" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signupUsernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingLeft="10sp"
                android:text="@string/username"
                style="@style/BaseTextStyle.Item"
                />

            <ImageView
                android:id="@+id/signupUsernameStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8sp"
                android:layout_toRightOf="@+id/signupUsernameLabel"/>

        <ImageView
            android:id="@+id/signupAvatar"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/profile_placeholder"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:padding="5sp"/>

        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupUsernameLabel"
            android:layout_toLeftOf="@id/signupAvatar"
            android:inputType="text"/>

        <TextView
            android:id="@+id/signupPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupUsername"
            android:paddingTop="10sp"
            android:paddingLeft="10sp"
            android:text="@string/password"
            style="@style/BaseTextStyle.Item"
            />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupPasswordLabel"
            android:inputType="textPassword"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingLeft="10sp"
            android:text="@string/confirm_password"
            style="@style/BaseTextStyle.Item"
            />

        <EditText
            android:id="@+id/signupConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingLeft="10sp"
            android:text="First Name"
            style="@style/BaseTextStyle.Item"
            />

        <EditText
            android:id="@+id/signupFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingLeft="10sp"
            android:text="Last Name"
            style="@style/BaseTextStyle.Item"
            />

        <EditText
            android:id="@+id/signupLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingLeft="10sp"
            android:text="About"
            style="@style/BaseTextStyle.Item"
            />

        <EditText
            android:id="@+id/signupAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/signupUserButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textAlignment="center"
            android:text="@string/SignUpLabel"
            android:textColor="#fff"
            android:background="@drawable/btn_login_signup_selector"/>

    </LinearLayout>

</ScrollView>